# chatgpt-bot-for-discord

./: .gitignore  Cargo.toml  README.md  readme.md
src/: chat_gpt.rs  chatgpt.rs  lib.rs  main.rs
