[package]
name = "cahatgpt-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.12.0"
shuttle-serenity = "0.12.0"
shuttle-secrets = "0.12.0"
tokio = "1.26.0"
anyhow = "1.0"
tracing = "0.1.37"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"